added start of js code

--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <head>
     <link href="https://cdnjs.cloudflare.com/ajax/libs/skeleton/2.0.4/skeleton.min.css" rel="stylesheet" type="text/css">
     <link href="style.css" rel="stylesheet" type="text/css">
+    <script href="calc.js"></script>
 </head>
 <body>
     
