--- a/index.html
+++ b/index.html
@@ -1,46 +1,63 @@
-<html>
-<head>
-    <link href="https://cdnjs.cloudflare.com/ajax/libs/skeleton/2.0.4/skeleton.min.css" rel="stylesheet" type="text/css">
-    <link href="style.css" rel="stylesheet" type="text/css">
-    <script href="calc.js"></script>
+<!DOCTYPE html>
+<html lang="en">
+ <head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/3.0.3/normalize.css">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/skeleton/2.0.4/skeleton.css">
+  <link rel="stylesheet" href="css/main.css">
+  <script src="calculate.js"></script>
+  <title>Calculator</title>
 </head>
 <body>
-    
-<div class="calculator">
-        <p id="title"></p>
-        <p id="tagline"></p>
-    <input type="text" disabled="disabled" id="answer"/>
-    <div class="row">
-      <button class="ctrl">AC</button>
-      <button class="ctrl">CE</button>
-      <button>%</button>
-      <button>÷</button>
-    </div>
-    <div class="row">
-      <button>7</button>
-      <button>8</button>
-      <button>9</button>
-      <button>x</button>
-    </div>
-    <div class="row">
-      <button>4</button>
-      <button>5</button>
-      <button>6</button>
-      <button>-</button>
-    </div>
-    <div class="row">
-      <button>1</button>
-      <button>2</button>
-      <button>3</button>
-      <button class="tall">+</button>
-    </div>
-    <div class="row">
-      <button>0</button>
-      <button>.</button>
-      <button>=</button>
-    </div>
+  <div class="container">
+    <div id="calculator">
+        <div class="border"
+        <div class="row">
+         <div id="screens">
+          <div id="echoScreen">
+            <p id="echo"></p>
+          </div>
+          <div id="mainScreen">
+            <p id="result"></p>
+        </div>  
+        </div>
+        </div>
+      </div>
+     <div class="border">
+      <div class="row">
+          <button class="three columns" value="ac">AC</button>
+          <button class="three columns" value="ce">CE</button>
+          <button class="three columns" value="bkn">&larr;</button>
+          <button class="three columns" value="/">&divide;</button>
+      </div>
+      <div class="row">
+        <button class="three columns" value="7">7</button>
+        <button class="three columns" value="8">8</button>
+        <button class="three columns" value="9">9</button>
+        <button class="three columns" value="*">&times;</button>
+      </div>
+      <div class="row">
+          <button class="three columns" value="4">4</button>
+          <button class="three columns" value="5">5</button>
+          <button class="three columns" value="6">6</button>
+          <button class="three columns" value="-">-</button>
+      </div>
+      <div class="row">
+          <button class="three columns" value="1">1</button>
+          <button class="three columns" value="2">2</button>
+          <button class="three columns" value="3">3</button>
+          <button class="three columns" value="+">+</button>
+      </div>
+      <div class="row">
+          <button class="three columns" value="0">0</button>
+          <button class="three columns" value=".">.</button>
+          <button class="six columns" value="=">=</button>
+      </div>
+  </div>
+    </div> 
+    <!-- end of calculator -->
   </div>
 </body>
-
-
 </html>
